--- a/nppSerialMonitor/nppSerialMonitor.csproj
+++ b/nppSerialMonitor/nppSerialMonitor.csproj
@@ -88,6 +88,12 @@
     <Compile Include="Forms\About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\SerialMonitorUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\SerialMonitorUI.Designer.cs">
+      <DependentUpon>SerialMonitorUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="PluginInfrastructure\ClikeStringArray.cs" />
     <Compile Include="PluginInfrastructure\DllExport\DllExportAttribute.cs" />
     <Compile Include="Forms\ConfigAndGenerate.cs">
@@ -127,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ConfigAndGenerate.resx">
       <DependentUpon>ConfigAndGenerate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\SerialMonitorUI.resx">
+      <DependentUpon>SerialMonitorUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
